tests/baselines/reference/mismatchedExplicitTypeParameterAndArgumentType.errors.txt
tests/cases/compiler/mismatchedExplicitTypeParameterAndArgumentType.ts(10,30): error TS2345: Argument of type '[1, ""]' is not assignable to parameter of type 'number[]'.
  Types of property 'push' are incompatible.
    Type '(...items: (1 | "")[]) => number' is not assignable to type '(...items: number[]) => number'.
      Types of parameters 'items' and 'items' are incompatible.
        Type 'number' is not assignable to type '1 | ""'.
tests/cases/compiler/mismatchedExplicitTypeParameterAndArgumentType.ts(11,11): error TS2558: Expected 2 type arguments, but got 1.


==== tests/cases/compiler/mismatchedExplicitTypeParameterAndArgumentType.ts (2 errors) ====
    function map<T, U>(xs: T[], f: (x: T) => U) {
        var ys: U[] = [];
        xs.forEach(x => ys.push(f(x)));
        return ys;
    }
    
    var r0 = map([1, ""], (x) => x.toString());
    var r5 = map<any, any>([1, ""], (x) => x.toString());
    var r6 = map<Object, Object>([1, ""], (x) => x.toString());
    var r7 = map<number, string>([1, ""], (x) => x.toString()); // error
                                 ~~~~~~~
!!! error TS2345: Argument of type '[1, ""]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   Types of property 'push' are incompatible.
!!! error TS2345:     Type '(...items: (1 | "")[]) => number' is not assignable to type '(...items: number[]) => number'.
!!! error TS2345:       Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:         Type 'number' is not assignable to type '1 | ""'.
    var r7b = map<number>([1, ""], (x) => x.toString()); // error
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 1.
    var r8 = map<any, string>([1, ""], (x) => x.toString());